Correct the problem of overflowing

--- a/Javascirpt/BinarySearchAlgorithm/styles/styles.css
+++ b/Javascirpt/BinarySearchAlgorithm/styles/styles.css
@@ -32,12 +32,14 @@ body {
     padding: 0px 20px 20px 20px;
 }
 
-table {
+.table_content {
+    table-layout: fixed;
+    width: 100%;
     font-family:'Courier New', Courier, monospace;
-    /* font-size: 16px; */
-    /* margin: 0 auto; */
-    /* color: white; */
-    /* border: 1px solid rgba(255, 136, 136, 0.726); */
+    font-size: 16px;
+    margin: 0 auto;
+    color: white;
+    border: 1px solid rgba(255, 136, 136, 0.726);
     border-width: 1px 1px 1px 1px;
 }
 
@@ -52,13 +54,14 @@ td {
     background-color: rgba(255, 255, 255, 0.719);
 }
 
-#table {
+.table {
+    width: 400px;
     padding: 20px 20px 20px 20px;
-    margin: 10px 10px 10px 10px;
+    margin: auto;
 }
 
 #array {
-    width: 100px;
+    overflow: auto;
 }
 
 .reset, .run {
